# stream_ecs

./: Cargo.toml
crates/stream-ecs/: Cargo.toml
crates/stream-ecs-macros/: Cargo.toml
crates/stream-ecs-macros/src/: component.rs  lib.rs  name.rs  resource.rs
crates/stream-ecs/src/: lib.rs  ref_mut.rs  registry.rs
crates/stream-ecs/src/component/: mod.rs
crates/stream-ecs/src/component/bundle/: error.rs  impls.rs  mod.rs
crates/stream-ecs/src/component/registry/: impls.rs  mod.rs
crates/stream-ecs/src/component/storage/: error.rs  mod.rs
crates/stream-ecs/src/component/storage/array/: basic.rs  dense.rs  hash.rs  mod.rs
crates/stream-ecs/src/component/storage/bundle/: impls.rs  mod.rs
crates/stream-ecs/src/dependency/: mod.rs
crates/stream-ecs/src/dependency/impls/: any.rs  error.rs  hlist.rs  mod.rs  option.rs  ref_kind.rs  unit.rs
crates/stream-ecs/src/entity/: default.rs  entity.rs  mod.rs
crates/stream-ecs/src/entity/builder/: builder.rs  error.rs  mod.rs  with.rs
crates/stream-ecs/src/entity/entry/: entry.rs  entry_mut.rs  mod.rs
crates/stream-ecs/src/entity/registry/: error.rs  mod.rs
crates/stream-ecs/src/entity/registry/array/: basic.rs  dense.rs  mod.rs
crates/stream-ecs/src/resource/: mod.rs
crates/stream-ecs/src/resource/bundle/: impls.rs  mod.rs
crates/stream-ecs/src/resource/registry/: impls.rs  mod.rs
crates/stream-ecs/src/utils/: mod.rs  type_name.rs
crates/stream-ecs/src/utils/ref_mut/: container.rs  impls.rs  mod.rs
crates/stream-ecs/src/utils/ref_mut/impls/: any.rs  hlist.rs  mod.rs  unit.rs
crates/stream-ecs/src/utils/registry/: contains.rs  find.rs  mod.rs
crates/stream-ecs/src/view/: mod.rs  view.rs  view_ref.rs
crates/stream-ecs/src/view/fetch/: component.rs  component_mut.rs  entity.rs  impls.rs  mod.rs  option.rs  unit.rs
crates/stream-ecs/src/view/iter/: iter.rs  iter_mut.rs  mod.rs  ref_iter.rs
crates/stream-ecs/src/view/query/: impls.rs  mod.rs  noop.rs
crates/stream-ecs/src/view/query/impls/: component.rs  component_mut.rs  entity.rs  hlist.rs  mod.rs  noop.rs  option.rs  unit.rs
crates/stream-ecs/src/view/view/: mod.rs
crates/stream-ecs/src/world/: builder.rs  error.rs  mod.rs  world.rs
crates/stream-ecs/src/world/view/: mod.rs  view.rs  view_ref.rs
examples/basic_usage/: Cargo.toml
examples/basic_usage/src/: main.rs
src/: lib.rs  ref_mut.rs  world.rs
src/component/: mod.rs
src/component/bundle/: error.rs  impls.rs  mod.rs
src/component/error/: mod.rs
src/component/registry/: mod.rs
src/component/storage/: error.rs  mod.rs
src/component/storage/array/: basic.rs  dense.rs  hash.rs  mod.rs
src/component/storage/bundle/: impls.rs  mod.rs
src/entity/: mod.rs
src/entity/builder/: error.rs  mod.rs
src/entity/builder/error/: mod.rs
src/entity/entry/: mod.rs
src/entity/error/: mod.rs
src/entity/registry/: array.rs  error.rs  mod.rs
src/entity/registry/array/: basic.rs  dense.rs  mod.rs
src/resource/: mod.rs
src/resource/bundle/: impls.rs  mod.rs
src/resource/registry/: impls.rs  mod.rs
src/world/: error.rs  mod.rs
src/world/error/: mod.rs
