[workspace]
members = ["crates/*", "examples/*"]
resolver = "3"

[workspace.package]
version = "0.0.0"
edition = "2024"
authors = ["tuguzT <timurka.tugushev@gmail.com>"]

[workspace.dependencies]
stream-ecs-macros = { version = "0.0.0", path = "crates/stream-ecs-macros" }
stream-ecs = { version = "0.0.0", path = "crates/stream-ecs" }
proc-macro2 = { version = "1" }
quote = { version = "1", default-features = false }
syn = { version = "2", default-features = false }
deluxe = { version = "0.5", default-features = false }
proc-macro-crate = { version = "3.3" }
hlist = { package = "hlist2", version = "0.0.15", default-features = false }
ref_kind = { version = "0.5", default-features = false }
num-traits = { version = "0.2", default-features = false }
arrayvec = { version = "0.7", default-features = false }
either = { version = "1", default-features = false }
lending-iterator = { version = "0.1", default-features = false }
polonius-the-crab = { version = "0.4", default-features = false }
derive_more = { version = "2.0", default-features = false }
