[package]
name = "stream-ecs-macros"
version.workspace = true
edition.workspace = true
authors.workspace = true

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1"
quote = { version = "1", default-features = false }
syn = { version = "2", default-features = false }
deluxe = { version = "0.5", default-features = false }
proc-macro-crate = "1"
