[package]
name = "stream-ecs-macros"
version.workspace = true
edition.workspace = true
authors.workspace = true

[lib]
proc-macro = true

[dependencies]
proc-macro2 = { workspace = true }
quote = { workspace = true }
syn = { workspace = true }
deluxe = { workspace = true }
proc-macro-crate = { workspace = true }
