[package]
name = "stream-ecs"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
stream-ecs-macros = { version = "0.0.0", path = "../stream-ecs-macros", optional = true }
hlist = { package = "hlist2", version = "0.0.13", default-features = false }
ref_kind = { version = "0.5", default-features = false }
as-any = { version = "0.3", default-features = false }
arrayvec = { version = "0.7", default-features = false }
either = { version = "1", default-features = false }
derive_more = { version = "0.99", default-features = false, features = ["from", "display"] }
lending-iterator = { version = "0.1", default-features = false }
polonius-the-crab = { version = "0.3", default-features = false }

[features]
default = ["derive"]
derive = ["dep:stream-ecs-macros"]
