[package]
name = "stream-ecs"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
stream-ecs-macros = { workspace = true, optional = true }
hlist = { workspace = true }
ref_kind = { workspace = true }
num-traits = { workspace = true }
arrayvec = { workspace = true }
either = { workspace = true }
lending-iterator = { workspace = true }
polonius-the-crab = { workspace = true }
derive_more = { workspace = true, features = ["from", "display"] }

[features]
default = ["derive"]
derive = ["dep:stream-ecs-macros"]
